--- a/package.json
+++ b/package.json
@@ -6,23 +6,31 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.1",
+    "@vercel/og": "^0.8.5",
+    "bcrypt": "^6.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "node-fetch": "^2.7.0",
+    "node-html-to-image": "^5.0.0",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "satori": "^0.18.2",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.19.13",
     "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
